--- a/slides.Rmd
+++ b/slides.Rmd
@@ -100,6 +100,8 @@ exclude: true
     
     - how to pool within codons, genes?    
 
+    - covariance across genome?
+
 - How does genomic change relate to changes in incidence?  
 
   (COVID-19 case incidence and cycle threshold (Ct) co-linear) 
